--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
+  "name": "sports-data-analysis",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html"
+  },
+  "devDependencies": {
+    "parcel": "^2.6.2"
+  },
   "dependencies": {
     "pathlib": "^0.1.2",
     "requests": "^0.3.0",
     "tenacity": "^1.0.4",
-    "tqdm": "^2.0.3"
+    "tqdm": "^2.0.3",
+    "@cubejs-client/core": "^0.31.0",
+    "chart.js": "^4.0.0"
   }
 }
