--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
-    "parcel": "^2.6.2"
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.8.0",
+    "parcel": "^2.6.2",
+    "prettier": "3.3.2"
   },
   "dependencies": {
     "@cubejs-client/core": "^0.31.0",
     "chart.js": "^4.0.0",
-    "eslint": "^9.6.0",
     "pathlib": "^0.1.2",
     "requests": "^0.3.0",
     "tenacity": "^1.0.4",
